plugins {
    alias libs.plugins.android.application
}

def localProps = new Properties()
if (rootProject.file("local.properties").exists()) {
    rootProject.file("local.properties").withInputStream { localProps.load(it) }
}

android {
    namespace = 'com.fongmi.android.tv'

    compileSdk libs.versions.compileSdk.get().toInteger()

    defaultConfig {
        applicationId "com.fongmi.android.tv"
        minSdk libs.versions.minSdk.get().toInteger()
        targetSdk libs.versions.targetSdk.get().toInteger()
        versionCode 560
        versionName "5.6.0"
        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString(), "eventBusIndex": "com.fongmi.android.tv.event.EventIndex"]
            }
        }
    }

    flavorDimensions = ["mode", "abi"]

    productFlavors {
        leanback {
            dimension "mode"
        }
        mobile {
            dimension "mode"
        }
        arm64_v8a {
            dimension "abi"
            ndk { abiFilters "arm64-v8a" }
        }
        armeabi_v7a {
            dimension "abi"
            ndk { abiFilters "armeabi-v7a" }
        }
    }

    buildFeatures {
        buildConfig = true
        viewBinding = true
    }

    signingConfigs {
        release {
            if (System.getenv("SIGNING_KEYSTORE_FILE") != null) {
                storeFile file(System.getenv("SIGNING_KEYSTORE_FILE"))
                storePassword System.getenv("SIGNING_KEYSTORE_PASSWORD")
                keyAlias System.getenv("SIGNING_KEY_ALIAS")
                keyPassword System.getenv("SIGNING_KEY_PASSWORD")
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled = true
            shrinkResources = true
            signingConfig = signingConfigs.release
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro', 'proguard-rules-media.pro'
        }
    }

    configurations.configureEach {
        exclude group: 'stax', module: 'stax-api'
        exclude group: 'xpp3', module: 'xpp3'
        exclude group: 'com.android.support'
        resolutionStrategy {
            force libs.okhttp
        }
    }

    lint {
        disable 'UnsafeOptInUsageError'
        disable 'ExpiredTargetSdkVersion'
    }

    compileOptions {
        coreLibraryDesugaringEnabled = true
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
}

androidComponents {
    onVariants(selector().withBuildType('release')) { variant ->
        def flavors = variant.productFlavors.collectEntries { [(it.first): it.second] }
        def mode = flavors['mode'] ?: 'mode'
        def abi = flavors['abi'] ?: 'abi'
        variant.outputs.each { output ->
            output.outputFileName.set("${mode}-${abi}.apk")
        }
    }
}


dependencies {
    implementation fileTree(dir: "libs", include: ["*.aar"])
    implementation project(':catvod')
    implementation project(':chaquo')
    implementation project(':quickjs')
    implementation libs.appcompat
    implementation libs.lifecycle.service
    implementation libs.media
    implementation libs.palette
    implementation libs.recyclerview
    implementation libs.room.runtime
    implementation libs.splashscreen
    implementation libs.swiperefreshlayout
    implementation libs.viewpager2
    implementation libs.android.gif.drawable
    implementation libs.bundles.glide
    implementation libs.bundles.jupnp
    implementation libs.customactivityoncrash
    implementation libs.eventbus
    implementation libs.flexbox
    implementation libs.rtmp.client
    implementation libs.lottie
    implementation libs.material
    implementation libs.materialdesigncolors
    implementation libs.nanohttpd
    implementation libs.newpipeextractor
    implementation libs.permissionx
    implementation libs.simple.xml
    implementation libs.textdrawable
    leanbackImplementation libs.leanback
    leanbackImplementation libs.androidautosize
    mobileImplementation libs.biometric
    mobileImplementation libs.zxing.android.embedded
    annotationProcessor libs.room.compiler
    annotationProcessor libs.eventbus.annotation.processor
    annotationProcessor libs.glide.compiler
    coreLibraryDesugaring libs.desugar

    // Google Official Open-Source Media3 Dependencies
    def media3Version = "1.3.1"
    implementation "androidx.media3:media3-common:${media3Version}"
    implementation "androidx.media3:media3-container:${media3Version}"
    implementation "androidx.media3:media3-database:${media3Version}"
    implementation "androidx.media3:media3-datasource:${media3Version}"
    implementation "androidx.media3:media3-datasource-okhttp:${media3Version}"
    implementation "androidx.media3:media3-datasource-rtmp:${media3Version}"
    implementation "androidx.media3:media3-decoder:${media3Version}"
    implementation "androidx.media3:media3-effect:${media3Version}"
    implementation "androidx.media3:media3-exoplayer:${media3Version}"
    implementation "androidx.media3:media3-exoplayer-dash:${media3Version}"
    implementation "androidx.media3:media3-exoplayer-hls:${media3Version}"
    implementation "androidx.media3:media3-exoplayer-rtsp:${media3Version}"
    implementation "androidx.media3:media3-exoplayer-smoothstreaming:${media3Version}"
    implementation "androidx.media3:media3-extractor:${media3Version}"
    implementation "androidx.media3:media3-session:${media3Version}"
    implementation "androidx.media3:media3-ui:${media3Version}"
}
